--- a/shika-bio.tex
+++ b/shika-bio.tex
@@ -14,38 +14,38 @@
 \input{./tex/part-hands-on-activities.tex}
 \settocdepth{subsection}
 
-%% Form I
-%\chapter{Biology Activities for Form I}
-%\input{./tex/i-activities_intro-bio}
-%\input{./tex/i-activities_safety-environment}
-%\input{./tex/i-activities_health-immunity}
-%\input{./tex/i-activities_cell-structure-organization}
-%\input{./tex/i-activities_classification}
-%
-%% Form II
-%\chapter{Biology Activities for Form II}
-%%\input{./tex/ii-activities_classification}
-%\input{./tex/ii-activities_nutrition}
-%\input{./tex/ii-activities_balance-nature}
-%\input{./tex/ii-activities_transport}
-%\input{./tex/ii-activities_gaseous-exchange-respiration}
-%
-%% Form III
-%\chapter{Biology Activities for Form III}
-%%\input{./tex/iii-activities_classification}
-%\input{./tex/iii-activities_movement}
-%\input{./tex/iii-activities_coordination}
-%%\input{./tex/iii-activities_excretion}
-%\input{./tex/iii-activities_regulation}
-%\input{./tex/iii-activities_reproduction}
-%
-%% Form IV
-%\chapter{Biology Activities for Form IV}
-%\input{./tex/iv-activities_growth}
-%\input{./tex/iv-activities_genetics}
-%%\input{./tex/iv-activities_classification}
-%\input{./tex/iv-activities_evolution}
-%%\input{./tex/iv-activities_hiv-aids-stis}
+% Form I
+\chapter{Biology Activities for Form I}
+\input{./tex/i-activities_intro-bio}
+\input{./tex/i-activities_safety-environment}
+\input{./tex/i-activities_health-immunity}
+\input{./tex/i-activities_cell-structure-organization}
+\input{./tex/i-activities_classification}
+
+% Form II
+\chapter{Biology Activities for Form II}
+%\input{./tex/ii-activities_classification}
+\input{./tex/ii-activities_nutrition}
+\input{./tex/ii-activities_balance-nature}
+\input{./tex/ii-activities_transport}
+\input{./tex/ii-activities_gaseous-exchange-respiration}
+
+% Form III
+\chapter{Biology Activities for Form III}
+%\input{./tex/iii-activities_classification}
+\input{./tex/iii-activities_movement}
+\input{./tex/iii-activities_coordination}
+%\input{./tex/iii-activities_excretion}
+\input{./tex/iii-activities_regulation}
+\input{./tex/iii-activities_reproduction}
+
+% Form IV
+\chapter{Biology Activities for Form IV}
+\input{./tex/iv-activities_growth}
+\input{./tex/iv-activities_genetics}
+%\input{./tex/iv-activities_classification}
+\input{./tex/iv-activities_evolution}
+%\input{./tex/iv-activities_hiv-aids-stis}
 
 
 % Biology Student Practical Worksheets
