--- a/shika-bio.tex
+++ b/shika-bio.tex
@@ -51,9 +51,10 @@
 % Biology Student Practical Worksheets
 %\input{./tex/part-spw-bio.tex}
 
-
-\appendix
+\clearpage
+\phantomsection
 \addcontentsline{toc}{part}{Appendix}
+\appendix
 \settocdepth{chapter}
 
 % Materials and Equipment
@@ -63,7 +64,6 @@
 \input{./tex/low-power-microscopy.tex}
 \input{./tex/storage-materials.tex}
 \input{./tex/modeling-materials.tex}
-%\input{./tex/sources-of-chemicals.tex}
 \input{./tex/making-biology-solutions.tex}
 \input{./tex/collecting-specimens.tex}
 
@@ -75,5 +75,7 @@
 \input{./tex/science-outside-classroom.tex}
 \input{./tex/science-community.tex}
 \input{./tex/hiv-awareness.tex}
+
+\input{./tex/activity-template.tex}
 
 \end{document}
