--- a/tex/i-activities_intro-bio.tex
+++ b/tex/i-activities_intro-bio.tex
@@ -263,10 +263,85 @@ To reduce excessive water losses by transpiration, special methods of cultivatio
 %\item[Hypothesis:]{}
 %\end{description*}
 
+\vfill
+\pagebreak
+
 %==================================================================================================%
 
 
 
 \end{multicols}
-\vfill
+
+
+\subsection{Hand Washing}
+
+%\begin{center}
+%\includegraphics[width=0.4\textwidth]{./img/source/.jpg}
+%\end{center}
+
+\begin{description*}
+\item[Materials:]{Soap, water, bottle, basin/bucket, chalk, charcoal, food colour, stopwatch}
+\item[Setup:]{Prepare a large amount of soapy water. Grind the chalk and charcoal into separate powders.}\\
+\item[Problem:]{How long should we wash our hands?\\
+
+\begin{tabular}{|l|c|c|} \hline
+\multirow{2}{*}{\textbf{Material}} & \textbf{Hypothesis} & \multirow{2}{*}{\textbf{Experimental Result}} \\
+& \textbf{(Seconds)} & \\ \hline
+Chalk powder & & \\ \hline
+Charcoal powder & & \\ \hline
+Food colour & & \\ \hline
+\end{tabular} \\[10pt]
+}\\
+\item[Hypothesis:]{Predict how much time it will take to completely clean your hands and record in the table.}
+\item[Procedure:]{Start a stopwatch and have a student or teacher slowly pour soapy water over a basin while the student washes his or her hands. Stop the clock when the student's hands are completely clean.}
+\item[Observations:]{Record the time taken to completely wash your hands in the table.}
+\item[Questions:]{}\hfill
+\begin{enumerate}
+\item Why is it important to wash our hands?
+\item When do we need to wash our hands?
+\end{enumerate}
+\item[Theory:]{Washing our hands with soap and water helps to kill harmful bacteria that can cause us to become sick if allowed into our bodies. It is very important to wash our hands before eating and after using the bathroom.}
+\end{description*}
+
+\pagebreak
+
+
+\subsection{Lung Capacity}
+
+\begin{center}
+\includegraphics[width=0.4\textwidth]{./img/source/lung-capacity.png}
+\end{center}
+
+\begin{description*}
+\item[Materials:]{1.5 L bottle, basin, water, plastic tubes/straws, soap, marker, ruler}
+\item[Setup:]{Make a scale on the bottle using a marker and ruler (e.g. 100 mL increments). Prepare a soap solution for washing the tubes/straws}\\
+\item[Problem:]{How much air can your lungs hold?\\
+
+\begin{tabular}{|l|c|c|} \hline
+\multirow{2}{*}{\textbf{Breath}} & \textbf{Hypothesis} & \multirow{2}{*}{\textbf{Experimental Result}} \\
+& \textbf{(Volume of air in mL)} & \\ \hline
+Normal breath & & \\ \hline
+Full breath & & \\ \hline
+After holding breath for 10 seconds & & \\ \hline
+\end{tabular} \\[10pt]
+}
+\item[Hypothesis:]{Record the volume of air that you think the lungs can hold for each case in the table.}
+\item[Procedure:]{Fill a basin with water. Fill a 1.5 L bottle with water and invert it in the basin so that the mouth of the bottle is underneath the water. Place one end of the tube/straw inside the bottle under water. For each breath, blow into the tube to displace the water.}
+\item[Observations:]{Note the reading on the scale before and after blowing into the tube and record the \emph{difference} to give the amount of water displaced.}
+\item[Questions:]{}\hfill
+\begin{enumerate}
+\item Which breath produces the largest amount of air? Which give the smallest amount?
+\item How long can you hold your breath?
+	\begin{enumerate}
+	\item[] Hypothesis: I can hold my breath for \_\_\_\_\_\_\_ seconds.
+	\item[] Experimental Result: I can hold my breath for \_\_\_\_\_\_\_ seconds.
+	\end{enumerate}
+\end{enumerate}
+\item[Theory:]{When we breath in air, our bodies use the oxygen and produce carbon dioxide in a process called \emph{respiration}. Oxygen is transported in our blood throughout our bodies. When we hold our breath, oxygen is not circulated throughout our bodies and we begin to feel lightheaded.}
+\end{description*}
+
+
+
+
+%\vfill
 \pagebreak
