--- a/tex/iii-activities_coordination.tex
+++ b/tex/iii-activities_coordination.tex
@@ -160,7 +160,7 @@ involuntary reflex response.}
 %\item[Notes:]{}
 \end{description*}
 
-\subsection{Tasteless Food}
+\subsection{Coordination Fluid}
 
 %\begin{center}
 %\includegraphics[width=0.4\textwidth]{./img/.jpg}
@@ -168,21 +168,40 @@ involuntary reflex response.}
 
 \begin{description*}
 %\item[Subtopic:]{}
-\item[Materials:]{Onion, apple or other fruit}
+\item[Materials:]{Plastic bottle, water}
 %\item[Setup:]{}
-\item[Procedure:]{Cut an onion and an apple into small pieces. Blindfold the person to be
-tested and make them hold their nose.}
+\item[Procedure:]{Have students bend over and spin in place, then try to walk in a straight line. Swirl a bottle of water around to represent the fluid in their ears being displaced by the spinning.}
 %\item[Hazards:]{}
 %\item[Questions:]{}
-\item[Observations:]{They will find the apple and
-onion taste the same! If students can detect the difference, try giving
-them the smell of onion as they eat the apple!}
-\item[Theory:]{Smell is very important
-in identifying foods. A cold or a blocked nose makes it difficult to taste
-properly.}
+\item[Observations:]{Students feel dizzy and disoriented after spinning in circles and are not able to walk in a straight line.}
+\item[Theory:]{Coordination fluid is located in the ears and its displacement causes disorientation and decreased coordination. Just as the fluid in the bottle is displaced by swirling, the fluid in your ears is also displaced by the centrifugal force of spinning around in circles.}
 %\item[Applications:]{}
 %\item[Notes:]{}
 \end{description*}
+
+%\subsection{Tasteless Food}
+%
+%%\begin{center}
+%%\includegraphics[width=0.4\textwidth]{./img/.jpg}
+%%\end{center}
+%
+%\begin{description*}
+%%\item[Subtopic:]{}
+%\item[Materials:]{Onion, apple or other fruit}
+%%\item[Setup:]{}
+%\item[Procedure:]{Cut an onion and an apple into small pieces. Blindfold the person to be
+%tested and make them hold their nose.}
+%%\item[Hazards:]{}
+%%\item[Questions:]{}
+%\item[Observations:]{They will find the apple and
+%onion taste the same! If students can detect the difference, try giving
+%them the smell of onion as they eat the apple!}
+%\item[Theory:]{Smell is very important
+%in identifying foods. A cold or a blocked nose makes it difficult to taste
+%properly.}
+%%\item[Applications:]{}
+%%\item[Notes:]{}
+%\end{description*}
 
 \columnbreak
 
