--- a/tex/local-materials-list.tex
+++ b/tex/local-materials-list.tex
@@ -12,13 +12,6 @@ In order to gain a thorough understanding of science, students must be able to m
 \end{itemize*}
 Imagination and innovativeness is encouraged on the part of the student and teacher to find other suitable local substitutions. 
 
-How many experiments can be carried out with everyday items?
-
-\begin{center}
-\includegraphics[width=12cm]{./img/vso/using-local-materials.jpg}
-\includegraphics[width=12cm]{./img/vso/multi-purpose-bottle.jpg}
-\end{center}
-
 Below are common apparatus you might order from a laboratory supply company, 
 and comments about which have good if not superior alternatives 
 available in villages and towns. 
@@ -95,6 +88,16 @@ The apparatus listed in this section are the following:
 
 \end{multicols}
 
+\pagebreak
+
+How many experiments can be carried out with everyday items?
+
+\begin{center}
+\includegraphics[width=12cm]{./img/vso/using-local-materials.jpg}
+\includegraphics[width=12cm]{./img/vso/multi-purpose-bottle.jpg}
+\end{center}
+
+
 \begin{multicols}{2}
 
 %\section{Alligator Clips}
@@ -111,7 +114,7 @@ The apparatus listed in this section are the following:
 \textbf{Materials:} Ruler or wooden bar 30 cm $\times$ 2 cm, nails, razor/knife, string/wire, pen, 2 \nameref{sec:scale-pan}\\
 \textbf{Procedure:} Find the balancing point of the ruler/wood block and mark it with a pen. Use a heated nail to make a hole through this point. Make notches at 5 cm intervals on either side of the center hole using a razor/knife to suspend scale pans. Use a string/wire tied through the center hole to suspend the balance.
 \begin{center}
-\includegraphics[width=0.45\textwidth]{./img/beam-balance.png}
+\includegraphics[width=0.4\textwidth]{./img/beam-balance-2.png}
 \end{center}
 
 \section{Beakers}
@@ -138,6 +141,8 @@ used as a connection to the mouth.
 \includegraphics[width=0.4\textwidth]{./img/source/blowpipe.jpg}
 \end{center} 
 
+\columnbreak
+
 %\section{Bulbs}
 %\label{sec:lightbulbs}
 %\vspace{-10pt}
@@ -149,12 +154,27 @@ used as a connection to the mouth.
 \label{sec:bunsen-burner}
 See \nameref{sec:heatsources} (p.~\pageref{sec:heatsources}).
 
-\section{Burettes}
+\section{Burettes} \index{Burettes! sources of}
 \label{sec:burettes}
 \vspace{-10pt}
-\textbf{Use:} Titration\\
+\textbf{Use:} Titration
+
+\subsection{Version 1}
+\vspace{-6pt}
 \textbf{Materials:} 10~mL syringes \\
-\textbf{Procedure:} Use 10~mL disposable plastic syringes with 0.2~mL gradations. Students can estimate between the lines to at least 0.05~mL. If you must buy, buy plastic. Note that broken burettes can often be repaired -- see \nameref{cha:burettes} (p.~\pageref{cha:burettes}).
+\textbf{Procedure:} Use 10~mL disposable plastic syringes with 0.2~mL gradations. Students can estimate between the lines to at least 0.05~mL. If you must buy, buy plastic. 
+%Note that broken burettes can often be repaired -- see \nameref{cha:burettes} (p.~\pageref{cha:burettes}).
+
+\subsection{Version 2}
+\vspace{-6pt}
+\textbf{Materials:} Syringe, IV giving set, super glue, knife\\
+\textbf{Procedure:} Cut off the part of the IV tube with the 
+flow
+control slider. Remove the plunger from the syringe and use superglue to
+attach the tube to the nozzle of the syringe.
+\begin{center}
+\includegraphics[width=0.49\textwidth]{./img/burette.jpg}
+\end{center}
 
 %\section{Circuit Components}
 %\label{sec:circuit-comp}
@@ -209,6 +229,8 @@ and combine to measure accurate volumes.
 \includegraphics[width=0.3\textwidth]{./img/source/deflagrating-spoon.jpg}
 \end{center}
 
+\columnbreak
+
 \section{Delivery Tube}
 \label{sec:delivery-tube}
 \vspace{-10pt}
@@ -243,6 +265,9 @@ and combine to measure accurate volumes.
 \vspace{-6pt}
 \textbf{Materials:} Old dry cell batteries\\
 \textbf{Procedure:} Gently smash an old battery (D size) with a rock and pull out the electrode with pliers. DO NOT do this with alkaline batteries (most AA size) as they contain caustic liquids.
+
+\columnbreak
+
 \subsection{Zinc}
 \vspace{-6pt}
 \textbf{Materials:} New dry cell batteries\\
@@ -306,6 +331,8 @@ and combine to measure accurate volumes.
 %\begin{center}
 %\includegraphics[width=5cm]{./img/vso/eureka-can.jpg}
 %\end{center}
+
+\columnbreak
 
 \section{Filter Paper}
 \label{sec:filter-paper}
@@ -617,6 +644,8 @@ If the spoon corrodes, scrape with another spoon or steel wool.
 \vspace{-10pt}
 \textbf{Use:} Simple pendulum, velocity, acceleration\\
 \textbf{Materials:} Athletic and laboratory stopwatches from markets, digital wristwatches
+
+\columnbreak
 
 \section{Test Tubes}
 \label{sec:testtubes}
