--- a/tex/i-activities_intro-bio.tex
+++ b/tex/i-activities_intro-bio.tex
@@ -6,7 +6,7 @@
 \section*{Characteristics of Living \hfill \\ Things}
 
 
-\subsection{Obvious Characteristics of \hfill \\ Living Things} % Source 10, LASM
+\subsection[Obvious Characteristics of Living Things]{Obvious Characteristics of \hfill \\ Living Things} % Source 10, LASM
 
 \begin{center}
 \includegraphics[width=0.45\textwidth]{./img/source/obv-char-living.png}
@@ -145,7 +145,7 @@ data graphically.}
 %\item[Notes:]{}
 \end{description*}
 
-\subsection{Weight Increase by \hfill \\ Germinating Seeds}
+\subsection[Weight Increase by Germinating Seeds]{Weight Increase by \hfill \\ Germinating Seeds}
 
 \begin{center}
 \includegraphics[width=0.45\textwidth]{./img/source/data-weight.png}
@@ -199,7 +199,7 @@ the daily loss of water in each container.}
 \subsection{Transport of Water} % Source 17
 
 \begin{center}
-\includegraphics[width=0.4\textwidth]{./img/source/sci-meth-ink-plant.png}
+\includegraphics[width=0.45\textwidth]{./img/source/sci-meth-ink-plant.png}
 \end{center}
 
 \begin{description*}
