--- a/tex/i-activities_safety-environment.tex
+++ b/tex/i-activities_safety-environment.tex
@@ -25,7 +25,25 @@
 %\item[Notes:]{}
 \end{description*}
 
-\vfill
+\subsection{Planting Trees}
+
+\begin{center}
+\includegraphics[width=0.4\textwidth]{./img/source/planting-trees.jpg}
+\end{center}
+
+\begin{description*}
+%\item[Subtopic:]{}
+%\item[Materials:]{}
+%\item[Setup:]{}
+\item[Procedure:]{Planting trees and protecting newly planted trees from animals is one way for community members to look out for the well-being of their environment and maintain and beautify their homes and schools.}
+%\item[Hazards:]{}
+%\item[Questions:]{}
+%\item[Observations:]{}
+\item[Theory:]{Trees consume excess carbon dioxide, which is a harmful greenhouse gas that eats away at our ozone layer. They produce the oxygen that we breath and help to maintain a balanced ecosystem for other organisms. }
+\item[Applications:]{Many individuals cut down trees for firewood but fail to replace them with newly planted trees. Over time this can lead to erosion and degradation of the land.}
+%\item[Notes:]{}
+\end{description*}
+
 \columnbreak
 
 \subsection{Trash Journal} % Shika 242 
@@ -47,9 +65,30 @@
 %\item[Notes:]{}
 \end{description*}
 
+\vfill
+
+\subsection{Water Purity Surveys}
+
+\begin{center}
+\includegraphics[width=0.4\textwidth]{./img/source/water-purity.jpg}
+\end{center}
+
+\begin{description*}
+%\item[Subtopic:]{}
+%\item[Materials:]{}
+%\item[Setup:]{}
+\item[Procedure:]{Keeping a record of water purity and health in a local community is a great way to raise awareness about environmental protection. Students can test for hardness of water, pH, or other impurities and harmful bacteria present in water samples.}
+%\item[Hazards:]{}
+\item[Questions:]{What are some other ways that you can get involved in protecting the environment?}
+%\item[Observations:]{}
+%\item[Theory:]{}
+%\item[Applications:]{}
+%\item[Notes:]{}
+\end{description*}
+
 %==================================================================================================%
 
 
 \end{multicols}
-\vfill
+
 \pagebreak
