--- a/tex/ii-activities_nutrition.tex
+++ b/tex/ii-activities_nutrition.tex
@@ -246,7 +246,7 @@ the presence of sugar.}
 %\item[Notes:]{}
 \end{description*}
 
-\subsection{Test for Non-Reducing \hfill \\ Sugars}
+\subsection[Test for Non-Reducing Sugars]{Test for Non-Reducing \hfill \\ Sugars}
 
 %\begin{center}
 %\includegraphics[width=0.4\textwidth]{./img/.png}
@@ -569,7 +569,7 @@ formulae of the substances involved. These may be written on the reverse side of
 of cards.}
 \end{description*}
 
-\subsection{Photosynthesis Equation Game} % VSO 39
+\subsection[Photosynthesis Equation Game]{Photosynthesis Equation \hfill \\ Game} % VSO 39
 
 \begin{center}
 \includegraphics[width=0.45\textwidth]{./img/vso/photo-game.jpg}
@@ -653,7 +653,7 @@ mechanical breaking of the cell membranes by grinding.}
 \item[Notes:]{The extraction of chlorophyll works better in alcohol or spirit.}
 \end{description*}
 
-\subsection{Chlorophyll and \hfill \\ Photosynthesis} % VSO 39, LASM 87
+\subsection[Chlorophyll and Photosynthesis]{Chlorophyll and \hfill \\ Photosynthesis} % VSO 39, LASM 87
 
 \begin{center}
 \includegraphics[width=0.4\textwidth]{./img/variegated-leaf.png}
@@ -710,7 +710,7 @@ taken place.}
 
 \columnbreak
 
-\subsection{Starch as a Product of \hfill \\ Photosynthesis} % Source 75
+\subsection[Starch as a Product of Photosynthesis]{Starch as a Product of \hfill \\ Photosynthesis} % Source 75
 
 \begin{center}
 \includegraphics[width=0.4\textwidth]{./img/source/photo-starch.png}
@@ -737,7 +737,7 @@ photosynthesis can take place, so no starch is produced.}
 \vfill
 \columnbreak
 
-\subsection{Oxygen as a Product of \hfill \\ Photosynthesis} % Source 74
+\subsection[Oxygen as a Product of Photosynthesis]{Oxygen as a Product of \hfill \\ Photosynthesis} % Source 74
 
 \begin{center}
 \includegraphics[width=0.4\textwidth]{./img/source/photo-gas.png}
