--- a/tex/ii-activities_transport.tex
+++ b/tex/ii-activities_transport.tex
@@ -112,7 +112,7 @@ pieces and then place each in a dish of water for an hour or so.}
 %\item[Notes:]{}
 \end{description*}
 
-\subsection{Osmosis/Active Transport \hfill \\ Model} % Source 79
+\subsection[Osmosis/Active Transport Model]{Osmosis/Active Transport \hfill \\ Model} % Source 79
 
 \begin{center}
 \includegraphics[width=0.45\textwidth]{./img/vso/active-transport.jpg}
