--- a/tex/making-biology-solutions.tex
+++ b/tex/making-biology-solutions.tex
@@ -4,19 +4,20 @@ Activities in the topics of Nutrition and Respiration require specific analytica
 %For local and low cost sources of the chemicals mentioned in these preparations, see the section on Sources of Chemicals.
 
 \begin{flushleft}
-\textbf{Benedict's Solution}\\
+\textbf{Benedict's Solution}
+\end{flushleft}
+\vspace{-9pt}
 Description: Bright blue solution\\
 Use: To test for reducing and non-reducing sugars\\
 Result: Gives orange precipitate when boiled with reducing sugar\\
 Hazard: Copper ions are poisonous if they enter the body. Use tools to avoid contact between copper (II) sulphate and skin. Wash hands after using this chemical.\\
 Procedure: Dissolve 5 teaspoons of sodium carbonate, 3 teaspoons of citric acid,
-and one teaspoon of copper sulphate in half a litre of water. Shake until everything is fully dissolved.\\Note: The addition of the citric acid and sodium carbonate should be done slowly as they cause effervescence when mixed quickly.
-\end{flushleft}
+and one teaspoon of copper sulphate in half a litre of water. Shake until everything is fully dissolved.\\Note: The addition of the citric acid and sodium carbonate should be done slowly as they cause effervescence when mixed quickly.\\
 
 \begin{flushleft}
 \textbf{Calcium Hydroxide Solution (Lime Water)}
 \end{flushleft}
-\vspace{-6pt}
+\vspace{-9pt}
 Description: Opaque white liquid\\
 Use: To test for \ce{CO2}\\
 Result: This liquid will change from clear to cloudy if \ce{CO2} is present.\\
@@ -27,7 +28,7 @@ Procedure: Add 3 spoonfuls of white cement into about half a litre of water. Sti
 \begin{flushleft}
 \textbf{Citric Acid Solution}
 \end{flushleft}
-\vspace{-6pt}
+\vspace{-9pt}
 Description: Colourless solution\\
 Use: To hydrolyse non-reducing sugars to reducing sugars\\
 Procedure: Dissolve 2 1/2 spoonfuls of citric acid in half a litre of water.\\
@@ -36,7 +37,7 @@ Procedure: Dissolve 2 1/2 spoonfuls of citric acid in half a litre of water.\\
 \begin{flushleft}
 \textbf{Copper Sulphate Solution}
 \end{flushleft}
-\vspace{-6pt}
+\vspace{-9pt}
 Description: Light blue solution\\
 Use: To test for proteins, to prepare Benedict's Solution\\
 Result: Gives a purple colour when combined with \ce{NaOH} in protein solution\\
@@ -46,7 +47,7 @@ Procedure: Dissolve 1 spoonful of \ce{CuSO4} crystals in 1/2 litre of water. Dis
 \begin{flushleft}
 \textbf{Iodine Solution}
 \end{flushleft}
-\vspace{-6pt}
+\vspace{-9pt}
 Description: Light brown solution\\
 Use: To test for starch and lipids\\
 Result: Gives a red ring with lipids and a black-blue with starch\\
@@ -66,7 +67,7 @@ Procedure: Dilute 1 part concentrated iodine tincture with 9 parts water. Keep t
 \begin{flushleft}
 \textbf{Sodium Hydroxide Solution}
 \end{flushleft}
-\vspace{-6pt}
+\vspace{-9pt}
 Description: Slightly cloudy white solution\\
 Use: To test for proteins\\
 Result: Gives a purple colour when combined with \ce{CuSO4} in protein solution\\
