--- a/tex/i-activities_health-immunity.tex
+++ b/tex/i-activities_health-immunity.tex
@@ -3,7 +3,7 @@
 \begin{multicols}{2}
 
 
-\subsection{Coughs and Sneezes \hfill \\ Spread Diseases} % VSO 58, Source 121
+\subsection[Coughs and Sneezes Spread Diseases]{Coughs and Sneezes \hfill \\ Spread Diseases} % VSO 58, Source 121
 
 \begin{center}
 \includegraphics[width=0.4\textwidth]{./img/source/coughs.png}
